--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -91,15 +91,18 @@ jobs:
       with:
          name: report
          path: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento
-    - name: Robot Report from TestExecute
-      uses: dorny/test-reporter@v1.6.0
-      if: always()
+    - name: Test Summary
+      id: test_summary
+      uses: test-summary/action@v2
       with:
-        name: TestComplete JUnit Report
-        path: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento/output.xml
-        reporter: robotframework
-    - name: GitHub Action Summary
+        paths: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento/*.xml
+        if: always()
+    - name: Notify Slack
+      uses: slackapi/slack-github-action@v1.19.0
+      with:
+        payload: |-
+         {
+           "message": "${{ steps.test_summary.outputs.passed }}/${{ steps.test_summary.outputs.total }} tests passed"
+         }
       if: always()
-      run: |
-        type summary.md | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Append
- 
+    
