--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -92,12 +92,14 @@ jobs:
          name: report
          path: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento
     - name: Test Summary
+      if: always()
       id: test_summary
       uses: test-summary/action@v2
       with:
         paths: ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento/*.xml
         if: always()
     - name: Add Lines of Code Summary
+      if: always()
       run: echo "${{ steps.loc.outputs.lines-of-code-summary }}" >> $GITHUB_STEP_SUMMARY
 
     
