--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 selenium >= 4.3.0
-robotframework >= 4.1.3
+#robotframework >= 6.1.1
 robotframework-pythonlibcore >= 4.4.1
 robotframework-seleniumlibrary
 robotframework-screencapLibrary
