--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.11]  # 3.12, pypy-3.9
-        rf-version: [6.0]
+        rf-version: [6.1.1]
         selenium-version: [4.21.0]
         #browser: [firefox, chrome, headlesschrome]  #edge
         browser: [chrome]  #edge
@@ -63,6 +63,9 @@ jobs:
     - name: Install RF ${{ matrix.rf-version }}
       run: |
         pip install -U --pre robotframework==${{ matrix.rf-version }}
+    - name: Install unicode
+      run: |    
+        !pip install unidecode
     - name: Install drivers via selenium-manager
       run: |
         if [[ ${{ matrix.selenium-version }} == '4.20.0' || ${{ matrix.selenium-version }} == '4.21.0' ]]; then
