--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -16,8 +16,8 @@ jobs:
         python-version: [3.11]  # 3.12, pypy-3.9
         rf-version: [6.1.1]
         selenium-version: [4.21.0]
-        #browser: [firefox, chrome, headlesschrome]  #edge
-        browser: [chrome]  #edge
+        browser: [firefox, chrome, headlesschrome]  #edge
+        #browser: [chrome]  #edge
     steps:
     - run: echo ${{ github.event }}
     - uses: actions/checkout@v4
@@ -33,18 +33,18 @@ jobs:
     - run: |
         echo Installed chromium version: ${{ steps.setup-chrome.outputs.chrome-version }}
         ${{ steps.setup-chrome.outputs.chrome-path }} --version
-    #- name: Setup firefox
-      #id: setup-firefox
-      #uses: browser-actions/setup-firefox@v1
-      #with:
-        #firefox-version: latest
-    #- run: |
-        #echo Installed firefox versions: ${{ steps.setup-firefox.outputs.firefox-version }}
-        #${{ steps.setup-firefox.outputs.firefox-path }} --version
-    #- name: Start xvfb
-      #run: |
-        #export DISPLAY=:99.0
-        #Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
+    - name: Setup firefox
+      id: setup-firefox
+      uses: browser-actions/setup-firefox@v1
+      with:
+        firefox-version: latest
+    - run: |
+        echo Installed firefox versions: ${{ steps.setup-firefox.outputs.firefox-version }}
+        ${{ steps.setup-firefox.outputs.firefox-path }} --version
+    - name: Start xvfb
+      run: |
+        export DISPLAY=:99.0
+        Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
     - name: Install dependencies
       if: matrix.python-version != 'pypy-3.7'
       run: |
@@ -81,10 +81,10 @@ jobs:
       #if: startsWith( matrix.python-version, 'pypy') == true
       #run: |
         #robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
-    #- name: Run tests with headless Chrome and with PyPy
-      #if: startsWith( matrix.python-version, 'pypy') == true
-      #run: |   
-        #robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
+    - name: Run tests with headless Chrome and with PyPy
+      if: startsWith( matrix.python-version, 'pypy') == true
+      run: |   
+        robot ./cadastro/nome/progressivo/CADBLC-1764/TC_AlteracaoIntituicaoFinanceira_NaoEnviaContaB3i.robot
     - name: Run robot tests
       run: |
          python -m robot -N 'Progressivo: Alteração Dados Participante' -d ./cadastro/nome/progressivo/CADBLC-1764/Resultados/NaoGeraEvento -i PROGRESSIVO_FILA_EVENTO_PARTICIPANTE_NAO_GERA_EVENTO ./cadastro/nome/progressivo/CADBLC-1764
