--- a/.github/workflows/robot-framework.yml
+++ b/.github/workflows/robot-framework.yml
@@ -19,8 +19,10 @@ jobs:
         #browser: [firefox, chrome, headlesschrome]  #edge
         browser: [chrome]  #edge
     steps:
-    - name: "run cypress test"
-      run: echo $HTTP_PROXY
+    - name: Install the Dev Proxy
+      run: |
+         # Set the system proxy settings (optional)
+         echo "http_proxy=http://CORPORATE%5Cp-pamelo:HappyDay#24@10.0.0.24:8080/" >> $GITHUB_ENV
       env:
          HTTP_PROXY: http://CORPORATE%5Cp-pamelo:HappyDay#24@10.0.0.24:8080/
     - run: echo ${{ github.event }}
